src/test/deca/context/valid/ContextSansObjet/Boucle/WhileVide.deca
//description:
// test de la structure while sans instruction
//
//Résultat:
//  ok
{
int i = 0;
while(i<3)
{
}
}
